kubernetes-config/sso-frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "12"
    field.cattle.io/publicEndpoints: '[{"addresses":["34.138.211.15"],"port":443,"protocol":"HTTPS","serviceName":"x-apps-sso:sso-frontend","ingressName":"x-apps-sso:sso-frontend","hostname":"sso-frontend.staging-xapps.dev","allNodes":false}]'
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"sso-frontend","namespace":"x-apps-sso"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"sso-frontend"}},"template":{"metadata":{"labels":{"app":"sso-frontend"}},"spec":{"containers":[{"image":"nginx","name":"sso-frontend","ports":[{"containerPort":80}]}],"restartPolicy":"Always"}}}}
    kubernetes.io/change-cause: kubectl set image deployment/sso-frontend sso-frontend=gcr.io/xapps-software/sso-frontend:22f34a18-release
      --kubeconfig=/tmp/rancher-273053265 --namespace=x-apps-sso --record=true
  creationTimestamp: "2022-05-23T13:16:35Z"
  generation: 23
  managedFields:
  - apiVersion: apps/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:kubectl.kubernetes.io/last-applied-configuration: {}
      f:spec:
        f:progressDeadlineSeconds: {}
        f:replicas: {}
        f:revisionHistoryLimit: {}
        f:selector: {}
        f:strategy:
          f:rollingUpdate:
            .: {}
            f:maxSurge: {}
            f:maxUnavailable: {}
          f:type: {}
        f:template:
          f:metadata:
            f:labels:
              .: {}
              f:app: {}
          f:spec:
            f:containers:
              k:{"name":"sso-frontend"}:
                .: {}
                f:imagePullPolicy: {}
                f:name: {}
                f:ports:
                  .: {}
                  k:{"containerPort":80,"protocol":"TCP"}:
                    .: {}
                    f:containerPort: {}
                    f:protocol: {}
                f:resources: {}
                f:terminationMessagePath: {}
                f:terminationMessagePolicy: {}
            f:dnsPolicy: {}
            f:restartPolicy: {}
            f:schedulerName: {}
            f:securityContext: {}
            f:terminationGracePeriodSeconds: {}
    manager: kubectl-client-side-apply
    operation: Update
    time: "2022-05-23T13:16:35Z"
  - apiVersion: apps/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          f:field.cattle.io/publicEndpoints: {}
    manager: rancher
    operation: Update
    time: "2022-05-23T13:16:36Z"
  - apiVersion: apps/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          f:kubernetes.io/change-cause: {}
      f:spec:
        f:template:
          f:spec:
            f:containers:
              k:{"name":"sso-frontend"}:
                f:image: {}
    manager: kubectl
    operation: Update
    time: "2022-06-10T16:51:20Z"
  - apiVersion: apps/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          f:deployment.kubernetes.io/revision: {}
      f:status:
        f:conditions:
          .: {}
          k:{"type":"Available"}:
            .: {}
            f:type: {}
          k:{"type":"Progressing"}:
            .: {}
            f:lastTransitionTime: {}
            f:lastUpdateTime: {}
            f:message: {}
            f:reason: {}
            f:status: {}
            f:type: {}
        f:observedGeneration: {}
    manager: kube-controller-manager
    operation: Update
    time: "2022-08-04T12:31:24Z"
  - apiVersion: apps/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:status:
        f:availableReplicas: {}
        f:conditions:
          k:{"type":"Available"}:
            f:lastTransitionTime: {}
            f:lastUpdateTime: {}
            f:message: {}
            f:reason: {}
            f:status: {}
        f:readyReplicas: {}
        f:replicas: {}
        f:updatedReplicas: {}
    manager: kube-controller-manager
    operation: Update
    subresource: status
    time: "2022-08-26T10:12:18Z"
  name: sso-frontend
  namespace: x-apps-sso
  resourceVersion: "454254321"
  uid: a24ae923-2f39-467c-b018-1597e1f9e91f
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: sso-frontend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: sso-frontend
    spec:
      containers:
      - image: gcr.io/xapps-software/sso-frontend:22f34a18-release
        imagePullPolicy: Always
        name: sso-frontend
        ports:
        - containerPort: 80
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2022-05-23T13:16:35Z"
    lastUpdateTime: "2022-07-06T11:14:36Z"
    message: ReplicaSet "sso-frontend-567bbc86f8" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2022-08-26T10:12:18Z"
    lastUpdateTime: "2022-08-26T10:12:18Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 23
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
