kubernetes-config/sso-frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/neg: '{"ingress":true}'
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app":"sso-frontend"},"name":"sso-frontend","namespace":"x-apps-sso"},"spec":{"ports":[{"port":80}],"selector":{"app":"sso-frontend"},"type":"ClusterIP"}}
  creationTimestamp: "2022-05-23T13:16:36Z"
  labels:
    app: sso-frontend
  managedFields:
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:kubectl.kubernetes.io/last-applied-configuration: {}
        f:labels:
          .: {}
          f:app: {}
      f:spec:
        f:ports:
          .: {}
          k:{"port":80,"protocol":"TCP"}:
            .: {}
            f:port: {}
            f:protocol: {}
            f:targetPort: {}
        f:selector: {}
        f:sessionAffinity: {}
        f:type: {}
    manager: kubectl-client-side-apply
    operation: Update
    time: "2022-05-23T13:16:36Z"
  name: sso-frontend
  namespace: x-apps-sso
  resourceVersion: "444448317"
  uid: 28157832-a78c-4a6d-a18b-1b6ea83e0497
spec:
  clusterIP: 10.176.2.236
  clusterIPs:
  - 10.176.2.236
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: sso-frontend
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
