kubernetes-config/uptime-kuma-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    field.cattle.io/publicEndpoints: '[{"addresses":["34.138.211.15"],"port":443,"protocol":"HTTPS","serviceName":"tools:uptime-kuma-service","ingressName":"tools:uptime-kuma-ingress","hostname":"services.staging-xapps.dev","allNodes":false}]'
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"kubernetes.io/ingress.class":"nginx","nginx.org/websocket-services":"uptime-kuma-service"},"name":"uptime-kuma-ingress","namespace":"tools"},"spec":{"rules":[{"host":"services.staging-xapps.dev","http":{"paths":[{"backend":{"serviceName":"uptime-kuma-service","servicePort":3001}}]}}],"tls":[{"hosts":["services.staging-xapps.dev"],"secretName":"cert-wildcard-hml-xapps"}]}}
    kubernetes.io/ingress.class: nginx
    nginx.org/websocket-services: uptime-kuma-service
  creationTimestamp: "2021-12-31T02:16:06Z"
  generation: 2
  managedFields:
  - apiVersion: extensions/v1beta1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          f:field.cattle.io/publicEndpoints: {}
    manager: rancher
    operation: Update
    time: "2021-12-31T02:17:08Z"
  - apiVersion: extensions/v1beta1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:kubectl.kubernetes.io/last-applied-configuration: {}
          f:kubernetes.io/ingress.class: {}
          f:nginx.org/websocket-services: {}
      f:spec:
        f:rules: {}
        f:tls: {}
    manager: kubectl-client-side-apply
    operation: Update
    time: "2021-12-31T02:37:25Z"
  - apiVersion: networking.k8s.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:status:
        f:loadBalancer:
          f:ingress: {}
    manager: nginx-ingress
    operation: Update
    subresource: status
    time: "2022-08-05T10:04:10Z"
  name: uptime-kuma-ingress
  namespace: tools
  resourceVersion: "435769608"
  uid: fd079df6-142d-493c-921c-9e91e28d8560
spec:
  rules:
  - host: services.staging-xapps.dev
    http:
      paths:
      - backend:
          service:
            name: uptime-kuma-service
            port:
              number: 3001
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - services.staging-xapps.dev
    secretName: cert-wildcard-hml-xapps
status:
  loadBalancer:
    ingress:
    - ip: 34.138.211.15
