kubernetes-config/uptime-kuma-service.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/neg: '{"ingress":true}'
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app":"uptime-kuma"},"name":"uptime-kuma-service","namespace":"tools"},"spec":{"ports":[{"port":3001}],"selector":{"app":"uptime-kuma"},"type":"ClusterIP"}}
  creationTimestamp: "2021-12-31T02:16:06Z"
  labels:
    app: uptime-kuma
  managedFields:
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:kubectl.kubernetes.io/last-applied-configuration: {}
        f:labels:
          .: {}
          f:app: {}
      f:spec:
        f:ports:
          .: {}
          k:{"port":3001,"protocol":"TCP"}:
            .: {}
            f:port: {}
            f:protocol: {}
            f:targetPort: {}
        f:selector: {}
        f:sessionAffinity: {}
        f:type: {}
    manager: kubectl-client-side-apply
    operation: Update
    time: "2021-12-31T02:16:06Z"
  name: uptime-kuma-service
  namespace: tools
  resourceVersion: "444448301"
  uid: 162a2c3a-ea9f-4ac0-a7eb-b0e06f75bd76
spec:
  clusterIP: 10.176.14.229
  clusterIPs:
  - 10.176.14.229
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 3001
    protocol: TCP
    targetPort: 3001
  selector:
    app: uptime-kuma
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
